--- a/pom.xml
+++ b/pom.xml
@@ -24,8 +24,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
                 <configuration>
-                    <source>15</source>
-                    <target>15</target>
+                    <release>15</release>
                 </configuration>
             </plugin>
             <plugin>
@@ -73,17 +72,30 @@
             <plugin>
                 <groupId>org.eclipse.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
-                <version>9.4.53.v20231009</version> <!-- Versión del plugin -->
+                <version>9.4.53.v20231009</version>
                 <configuration>
                     <webApp>
-                        <contextPath>/</contextPath> <!-- Contexto raíz de tu aplicación -->
+                        <contextPath>/</contextPath>
                     </webApp>
                     <webAppSourceDirectory>${project.basedir}/src/main/webapp</webAppSourceDirectory> <!-- Ubicación de tu aplicación web -->
                     <httpConnector>
-                        <port>8080</port> <!-- Puerto de tu servidor -->
+                        <port>8080</port>
                     </httpConnector>
                 </configuration>
             </plugin>
+                <plugin>
+                    <groupId>io.gatling</groupId>
+                    <artifactId>gatling-maven-plugin</artifactId>
+                    <version>3.9.0</version>
+                    <executions>
+                        <execution>
+                            <phase>integration-test</phase>
+                            <goals>
+                                <goal>test</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
         </plugins>
     </build>
 
@@ -126,7 +138,7 @@
             <artifactId>swagger-jaxrs2</artifactId>
             <version>${swagger-core-version}</version>
             <exclusions>
-                <!-- Excluir Jersey arrastrado por swagger-jaxrs2 -->
+                <!-- Exclude Jersey dragged by swagger-jaxrs2 -->
                 <exclusion>
                     <groupId>org.glassfish.jersey.media</groupId>
                     <artifactId>jersey-media-json-jackson</artifactId>
@@ -137,17 +149,20 @@
             <groupId>io.swagger.parser.v3</groupId>
             <artifactId>swagger-parser</artifactId>
             <version>${swagger-parser-version}</version>
+            <exclusions>
+                <!-- Excluimos duplicados manejados manualmente -->
+                <exclusion>
+                    <groupId>com.fasterxml.jackson.core</groupId>
+                    <artifactId>jackson-databind</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>io.swagger</groupId>
             <artifactId>swagger-inflector</artifactId>
             <version>${swagger-inflector-version}</version>
             <exclusions>
-                <!-- Excluir Jersey arrastrado por swagger-inflector -->
-                <exclusion>
-                    <groupId>org.glassfish.jersey.core</groupId>
-                    <artifactId>jersey-server</artifactId>
-                </exclusion>
+                <!-- Exclude Jersey dragged by swagger-inflector -->
                 <exclusion>
                     <groupId>org.glassfish.jersey.core</groupId>
                     <artifactId>jersey-common</artifactId>
@@ -159,7 +174,7 @@
             </exclusions>
         </dependency>
 
-        <!-- Jersey Dependencies: Forzar versión única -->
+        <!-- Jersey Dependencies: Force single version -->
         <dependency>
             <groupId>org.glassfish.jersey.core</groupId>
             <artifactId>jersey-common</artifactId>
@@ -183,7 +198,18 @@
         <dependency>
             <groupId>org.glassfish.jaxb</groupId>
             <artifactId>jaxb-runtime</artifactId>
-            <version>4.0.3</version> <!-- O la versión más reciente -->
+            <version>4.0.3</version>
+        </dependency>
+        <!-- Logging -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.9</version>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.xml.bind</groupId>
+            <artifactId>jakarta.xml.bind-api</artifactId>
+            <version>2.3.3</version>
         </dependency>
 
         <!-- REST-assured for API Testing -->
@@ -213,6 +239,39 @@
             <artifactId>snakeyaml</artifactId>
             <version>1.29</version>
         </dependency>
+
+        <!-- Gatling Core for Java DSL -->
+        <dependency>
+            <groupId>io.gatling</groupId>
+            <artifactId>gatling-core-java</artifactId>
+            <version>3.9.0</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- Gatling HTTP for Java DSL -->
+        <dependency>
+            <groupId>io.gatling</groupId>
+            <artifactId>gatling-http-java</artifactId>
+            <version>3.9.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.gatling</groupId>
+            <artifactId>gatling-compiler</artifactId>
+            <version>3.9.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.gatling.highcharts</groupId>
+            <artifactId>gatling-charts-highcharts</artifactId>
+            <version>3.9.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-library</artifactId>
+            <version>2.13.10</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <repositories>
@@ -233,6 +292,10 @@
                 <enabled>true</enabled>
             </snapshots>
         </repository>
+        <repository>
+            <id>gatling</id>
+            <url>https://repo.gatling.io/maven</url>
+        </repository>
     </repositories>
 
     <properties>
@@ -241,8 +304,5 @@
         <swagger-parser-version>2.1.16</swagger-parser-version>
         <swagger-inflector-version>2.0.11</swagger-inflector-version>
         <jetty-version>9.4.53.v20231009</jetty-version>
-        <logback-version>1.4.11</logback-version>
-        <junit-version>4.13.2</junit-version>
-        <slf4j-version>2.0.9</slf4j-version>
     </properties>
 </project>
